tester_ft/log/compile_error_vec_13.txt
-VECTOR REVERSE ITER TEST-

./tmp/outfile_vec_13.cpp:42:12: error: no member named 'equal' in namespace 'ft'
                if (!ft::equal(it_rb, it_re, its_rb))
                     ~~~~^
1 error generated.
